# framebuffer-streaming

./: .gitignore  .gitmodules  ADAPTIVE_ENCODING.md  ANDROID_VS_XORG_DISPLAY_QUERY.md  BREEZY_DESKTOP_COMPATIBILITY.md  DRM_HEADERS_EXPLANATION.md  DRM_VS_LIBDRM.md  HANDSHAKE_PROTOCOL.md  HLD.md  MODE_CAPABILITIES_FLOW.md  NOISE_IMPLEMENTATION_STATUS.md  NOISE_LIBRARY_COMPARISON.md  NOISE_PROTOCOL_INTEGRATION.md  OPTION1_FUNCTIONALITY.md  PLAN.md  README.md  TV_DISPLAY_EXPLANATION.md  UDP_VS_TCP_ANALYSIS.md  USB_TETHERING_ADB.md
client/: settings.gradle
client/app/src/main/java/com/framebuffer/client/: FrameReceiver.java  MainActivity.java  Protocol.java
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: strings.xml
server/: CMakeLists.txt  README.md
server/include/: protocol.h  server.h  x11_output.h
server/src/: drm_fb.c  main.c  protocol.c  server.c  x11_output.c
tv-receiver/: README.md  build.gradle  deploy.sh  gradle.properties  gradlew  local.properties  settings.gradle  src
tv-receiver/app/: build.gradle  version.properties
tv-receiver/app/src/main/: AndroidManifest.xml
tv-receiver/app/src/main/cpp/: CMakeLists.txt  edid_parser.cpp
tv-receiver/app/src/main/java/com/framebuffer/client/: AudioReceiver.java  EdidParser.java  FrameReceiver.java  H264Decoder.java  MainActivity.java  NoiseEncryption.java  Protocol.java
tv-receiver/app/src/main/res/layout/: activity_main.xml  presentation_tv.xml
tv-receiver/app/src/main/res/values/: strings.xml  styles.xml
x11-streamer/: CMakeLists.txt
x11-streamer/include/: audio_capture.h  dirty_rect.h  drm_fb.h  encoding_metrics.h  h264_encoder.h  noise_encryption.h  protocol.h  x11_output.h  x11_streamer.h
x11-streamer/src/: audio_capture.c  dirty_rect.c  drm_fb.c  encoding_metrics.c  h264_encoder.c  main.c  noise_encryption.c  noise_stubs.c  protocol.c  x11_output.c  x11_streamer.c
